--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,11 +1,44 @@
-body {
-  text-align: center;
-}
-
 .Weather {
   border: 1px solid black;
+  border-radius: 8px;
+  margin: 40px auto 10px;
+  padding: 18px;
+  color: rgb(81, 80, 92);
 }
 
+.Weather h1 {
+  font-size: 30px;
+  margin: 20px auto 0;
+  line-height: 30px;
+  color: rgb(45, 29, 134);
+}
+
+.Weather ul {
+  margin: 10px 0 10px;
+  padding: 0;
+}
 .Weather li {
   list-style: none;
+  font-size: 13px;
+  line-height: 18px;
+}
+
+.Weather img {
+  height: 100px;
+  width: 100px;
+  display: inline;
+  vertical-align: top;
+}
+
+.Weather .temperature {
+  line-height: 100px;
+  font-weight: bold;
+  font-size: 50px;
+}
+
+.Weather .unit {
+  font-size: 15px;
+  font-weight: 400;
+  position: relative;
+  top: -25px;
 }
