--- a/src/Weather.css
+++ b/src/Weather.css
@@ -2,7 +2,7 @@
   border: 1px solid #3dbbe2;
   border-radius: 8px;
   margin: 40px auto 10px;
-  padding: 18px;
+  padding: 20px 25px 20px;
   color: rgb(81, 80, 92);
   background-color: rgba(255, 255, 255, 0.2);
 }
