--- a/src/Weather.css
+++ b/src/Weather.css
@@ -31,6 +31,11 @@
   vertical-align: top;
 }
 
+.Weather form .btn:hover {
+  background-color: #3dbbe2;
+  color: #ffffff;
+}
+
 .Weather .temperature {
   line-height: 100px;
   font-weight: 500;
